--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@
     <header class="header">
       <a class="header__heading-link">
         <div class="header__heading-logo-wrapper">
-          <img src="//shop.strong-hold.com/cdn/shop/files/strong-hold-logo.svg?v=1705508448&amp;width=600"
-            alt="Strong Hold" />
+          <img src=""
+            alt="Servo-Press" />
         </div>
       </a>
     </header>
@@ -358,7 +358,7 @@
     <model-viewer id="modelViewer" autoplay ar ar-modes="webxr" scale="2.54 2.54 2.54" ar-scale="fixed"
       camera-orbit="-30deg auto auto" max-camera-orbit="auto 100deg auto" shadow-intensity="1" camera-controls
       touch-action="pan-y"
-      src="https://raw.githubusercontent.com/Arul11111990/strong_h/main/assets/cart/StrandHold_ani_comp.glb"
+      src="https://raw.githubusercontent.com/Arul11111990/servo/6c3e342772612355c320df85225236b8096211ac/servo_press1.glb"
       alt="A 3D model of a tool cart">
 
 
