--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     <header class="header">
       <a class="header__heading-link">
         <div class="header__heading-logo-wrapper">
-          <img src=""
+          <img src="https://raw.githubusercontent.com/Arul11111990/servo/a971f235e9042fdae5ee6c7a7ad23af790e43a0c/cnc-india-logo.png"
             alt="Servo-Press" />
         </div>
       </a>
@@ -355,7 +355,7 @@
   <div class="content">
     
 
-    <model-viewer id="modelViewer" autoplay ar ar-modes="webxr" scale="1 1 1" ar-scale="fixed"
+    <model-viewer id="modelViewer" autoplay ar ar-modes="webxr" scale="1 1 1" ar-scale="auto"
       camera-orbit="-30deg auto auto" max-camera-orbit="auto 100deg auto" shadow-intensity="1" camera-controls
       touch-action="pan-y"
       src="https://raw.githubusercontent.com/Arul11111990/servo/6c3e342772612355c320df85225236b8096211ac/servo_press1.glb"
