--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
 
     .header-wrapper {
-      background-color: #241f21;
+      background-color: #FFFFFF;
       padding: 10px 0;
     }
 
