--- a/servo.html
+++ b/servo.html
@@ -356,13 +356,13 @@
     <div style="position: absolute; top: 10px; left: 10px; z-index: 1000;">
     <label for="modelDropdown">Select Model:</label>
     <select id="modelDropdown">
-      <option value=""https://raw.githubusercontent.com/Arul11111990/servo/708a5fd3078534b7701f969afb4963e9c6802b56/servo_press7.glb"">
+      <option value="https://raw.githubusercontent.com/Arul11111990/servo/708a5fd3078534b7701f969afb4963e9c6802b56/servo_press7.glb">
         Model 1
       </option>
       <option value="https://raw.githubusercontent.com/Arul11111990/servo/708a5fd3078534b7701f969afb4963e9c6802b56/servo_press3.glb">Model 2</option>
       <option value="https://raw.githubusercontent.com/Arul11111990/servo/708a5fd3078534b7701f969afb4963e9c6802b56/servo_press4.glb">Model 3</option>
-      <option value=""https://raw.githubusercontent.com/Arul11111990/servo/708a5fd3078534b7701f969afb4963e9c6802b56/servo_press2.glb"">Model 4</option>
-      <option value=""https://raw.githubusercontent.com/Arul11111990/servo/708a5fd3078534b7701f969afb4963e9c6802b56/servo_press5.glb"">Model 5</option>
+      <option value="https://raw.githubusercontent.com/Arul11111990/servo/708a5fd3078534b7701f969afb4963e9c6802b56/servo_press2.glb">Model 4</option>
+      <option value="https://raw.githubusercontent.com/Arul11111990/servo/708a5fd3078534b7701f969afb4963e9c6802b56/servo_press5.glb">Model 5</option>
     </select>
     </div>
   
